Prevent images overflowing post media object for narrow browser.

--- a/assets/css/application.scss
+++ b/assets/css/application.scss
@@ -68,6 +68,7 @@ tr.spacer {
 
 .post-view {
     min-height: 400px!important;
+    overflow: scroll;
 }
 
 .post-list-nav .col {
